Add trailer controller, start working with stimulus js framework

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,12 +1,13 @@
-h2 Most Popular Movies
+h1 FindWhatToWatch.com
+h2 Popular Movies
 - @popular_movies.each do |movie|
   - if movie["poster_path"]
-    = image_tag(TMDBService.image_url(movie["poster_path"]))
+    = image_tag(TMDBService.image_url(movie["poster_path"]), alt: "popular movie " + movie["original_title"], data: { controller: "hello", id: movie["id"], overview: movie["overview"], title: movie["original_title"]  }, class: "movie-image")
 
 h2 Highest Rated Movies
 - @highest_rated_movies.each do |movie|
   - if movie["poster_path"]
-    = image_tag(TMDBService.image_url(movie["poster_path"]))
+    = image_tag(TMDBService.image_url(movie["poster_path"]), alt: "highest rated movie " + movie["original_title"])
 
 / h2 Most Popular Shows 
 /   - @most_popular_shows.each do |show|
