--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -2,18 +2,12 @@ h1 FindWhatToWatch.com
 h2 Popular Movies
 - @popular_movies.each do |movie|
   - if movie["poster_path"]
-    div data={ controller: "movie", action: "click->movie#printData", id: movie["id"], overview: movie["overview"], title: movie["original_title"] }
-     = image_tag(TMDBService.image_url(movie["poster_path"]), alt: "popular movie " + movie["original_title"], data: { target: "poster" }, class: "movie-image")
+    div.movie-div id="movie-div-#{movie['id']}" data={id: movie["id"], overview: movie["overview"], title: movie["original_title"] }
+      = image_tag(TMDBService.image_url(movie["poster_path"]), alt: "popular movie " + movie["original_title"], class: "movie-image")
+      div
+        iframe src="" title="Movie Teaser #{movie['original_title']}" class="movie-teaser-iframe" id="movie-teaser-#{movie}"
 
 h2 Highest Rated Movies
 - @highest_rated_movies.each do |movie|
   - if movie["poster_path"]
     = image_tag(TMDBService.image_url(movie["poster_path"]), alt: "highest rated movie " + movie["original_title"])
-
-/ h2 Most Popular Shows 
-/   - @most_popular_shows.each do |show|
-/     = image_tag(TMDBService.image_url(show["poster_path"]))
-
-/ h2 Highest Rated Shows
-/   - @highest_rated_shows.each do |show|
-/     = image_tag(TMDBService.image_url(show["poster_path"]))
