--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Whattowatch</title>
+    <title>Find What To Watch</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -24,6 +24,7 @@
   <% end %>
 
   <body>
+    <span name="env" data-env="<%=Rails.env%>" id="env"></span>
     <%= yield %>
   </body>
 </html>
