--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -4,7 +4,9 @@ h2 Popular Movies
   - if movie["poster_path"]
     div.movie-div id="movie-div-#{movie['id']}" data={id: movie["id"], overview: movie["overview"], title: movie["original_title"] }
       = image_tag(TMDBService.image_url(movie["poster_path"]), alt: "popular movie " + movie["original_title"], class: "movie-image")
-      div
-        iframe src="" title="Movie Teaser #{movie['original_title']}" class="movie-teaser-iframe" id="movie-teaser-#{movie['id']}" data-id="#{movie['id']}"
-
+    div.movie-info id="movie-info-#{movie['id']}"
+      iframe src="" title="Movie Teaser #{movie['original_title']}" class="movie-teaser-iframe" id="movie-teaser-#{movie['id']}" data-id="#{movie['id']}"
+      h3=movie["original_title"]
+      .movie-overview
+        =movie["overview"]
 = javascript_include_tag params[:controller]
