--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,7 +6,18 @@
 
 }
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
+  body {
+    // text-align: center;
+    position: absolute;
+  }
+
+  h1 {
+    // text-align: left;
+    text-align: center;
+    padding-bottom: 0px !important;
+  }
+
   .movie-div {
     width: 100%;
     margin: auto;
@@ -54,32 +65,8 @@ body {
     padding: 5px;
   }
 
-  h2 {
-    font-weight: 300;
-    padding: 5px;
-    margin-bottom: 0px;
-   }
-
    h3 {
     font-weight: 200;
     font-style: italic;
    }
-}
-
-@media (max-width: 600px) {
-  .body {
-    text-align: center;
-  }
-
-  h1 {
-    text-align: left;
-    padding-bottom: 0px !important;
-  }
-
-  h2 {
-    text-align: left;
-    padding-top: 0px !important; 
-    padding-bottom: 3px !important;
-    margin-bottom: 0px !important;
-  }
 }
