--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -28,7 +28,7 @@
   .movie-info {
     display: none;
     margin: auto;
-    height: 440px !important;
+    height: 540px !important;
     width: 440px;
   }
 
@@ -51,6 +51,16 @@
 .movie-teaser-iframe {
   width: 440px;
   height: 247.5px;
+}
+
+.movie-rating {
+  padding-left: 5px;
+  float: left;
+}
+
+.movie-vote-count {
+  padding-right: 5px;
+  float: right;
 }
 
 body {
